QPixmapItem: Adjust rendering to dpr positioning

Push a bit further c3e6627e598ba25d2da87f5359aad194c122a6d9

BUG: 481219